<resources>
    <string name="app_name">Protok</string>
    <string name="buttonClicavel">Chamadas recebidas</string>
    <string name="qtdLigacoes">0</string>
    <string name="txtAprensentacao">HISTORICO DE CHAMADAS</string>
    <string name="todo">TODO</string>
    <string name="name_user_call_text">Quem ligou?</string>
    <string name="duration_call_user_text">00:00</string>
    <string name="view_duration_text">Duração</string>
    <string name="apresentationCallReceived">Duração (s)</string>
    <string name="titleReceivedCall">CHAMADA PERDIDA</string>
    <string name="numberCallReceived">0</string>
    <string name="btnBackHome">Histórico</string>
    <string name="lbMenuApagar">Apagar</string>
    <string name="lbMenuPrincipalConfiguracao">Ajustes</string>
    <string name="lbMenuPrincipalRefresh">Atualizar</string>
    <string name="title_activity_tab_view">TabView</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="name_gravacao_text">Gravação 1</string>
    <string name="date_gravao">01/01/2019 00:00:00</string>
    <string name="statusGravacao">INICIAR</string>
    <string name="txtGravacaoLabel">GRAVAÇÃO</string>
    <string name="labelTempoGravacao">00:00</string>
    <string name="labelNotification" />
    <string name="lb_title_card_detail">Detalhes</string>
</resources>
